# speexdsp-cmake

./: .gitmodules  CMakeLists.txt  config.h.cmake
